API Docs with Scribe

--- a/.scribe/endpoints/00.yaml
+++ b/.scribe/endpoints/00.yaml
@@ -1,4 +1,4 @@
-name: Endpoints
+name: 'Public endpoints'
 description: ''
 endpoints:
   -
@@ -6,7 +6,7 @@ endpoints:
       - GET
     uri: api/v1/travels
     metadata:
-      groupName: Endpoints
+      groupName: 'Public endpoints'
       groupDescription: ''
       subgroup: ''
       subgroupDescription: ''
@@ -50,7 +50,7 @@ endpoints:
       - GET
     uri: 'api/v1/travels/{travel_slug}/tours'
     metadata:
-      groupName: Endpoints
+      groupName: 'Public endpoints'
       groupDescription: ''
       subgroup: ''
       subgroupDescription: ''
@@ -78,28 +78,28 @@ endpoints:
         name: priceFrom
         description: ''
         required: false
-        example: 86862814.8039
+        example: 118926637.09187
         type: number
         custom: []
       priceTo:
         name: priceTo
         description: ''
         required: false
-        example: 758.0
+        example: 2714.0
         type: number
         custom: []
       dateFrom:
         name: dateFrom
         description: 'Must be a valid date.'
         required: false
-        example: '2023-06-16T06:36:53'
+        example: '2023-06-16T06:41:26'
         type: string
         custom: []
       dateTo:
         name: dateTo
         description: 'Must be a valid date.'
         required: false
-        example: '2023-06-16T06:36:53'
+        example: '2023-06-16T06:41:26'
         type: string
         custom: []
       sortBy:
@@ -117,10 +117,10 @@ endpoints:
         type: string
         custom: []
     cleanBodyParameters:
-      priceFrom: 86862814.8039
-      priceTo: 758.0
-      dateFrom: '2023-06-16T06:36:53'
-      dateTo: '2023-06-16T06:36:53'
+      priceFrom: 118926637.09187
+      priceTo: 2714.0
+      dateFrom: '2023-06-16T06:41:26'
+      dateTo: '2023-06-16T06:41:26'
       sortBy: price
       sortOrder: asc
     fileParameters: []
@@ -539,293 +539,9 @@ endpoints:
           cache-control: 'no-cache, private'
           content-type: application/json
           x-ratelimit-limit: '60'
-          x-ratelimit-remaining: '58'
+          x-ratelimit-remaining: '59'
           access-control-allow-origin: '*'
         description: null
-        custom: []
-    responseFields: []
-    auth: []
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
-      - POST
-    uri: api/v1/admin/travels
-    metadata:
-      groupName: Endpoints
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'POST Travel'
-      description: 'Creates a new Travel record.'
-      authenticated: true
-      custom: []
-    headers:
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters: []
-    cleanUrlParameters: []
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters:
-      is_public:
-        name: is_public
-        description: ''
-        required: false
-        example: true
-        type: boolean
-        custom: []
-      name:
-        name: name
-        description: ''
-        required: true
-        example: voluptatem
-        type: string
-        custom: []
-      description:
-        name: description
-        description: ''
-        required: true
-        example: sint
-        type: string
-        custom: []
-      number_of_days:
-        name: number_of_days
-        description: ''
-        required: true
-        example: 7
-        type: integer
-        custom: []
-    cleanBodyParameters:
-      is_public: true
-      name: voluptatem
-      description: sint
-      number_of_days: 7
-    fileParameters: []
-    responses:
-      -
-        status: 200
-        content: '{"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234","slug":"my-new-travel-234", ...}'
-        headers: []
-        description: ''
-        custom: []
-      -
-        status: 422
-        content: '{"message":"The name has already been taken.","errors":{"name":["The name has already been taken."]}}'
-        headers: []
-        description: ''
-        custom: []
-    responseFields: []
-    auth: []
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
-      - POST
-    uri: 'api/v1/admin/travels/{travel_id}/tours'
-    metadata:
-      groupName: Endpoints
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: ''
-      description: ''
-      authenticated: false
-      custom: []
-    headers:
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters:
-      travel_id:
-        name: travel_id
-        description: 'The ID of the travel.'
-        required: true
-        example: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
-        type: string
-        custom: []
-    cleanUrlParameters:
-      travel_id: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters:
-      name:
-        name: name
-        description: ''
-        required: true
-        example: nihil
-        type: string
-        custom: []
-      starting_date:
-        name: starting_date
-        description: 'Must be a valid date.'
-        required: true
-        example: '2023-06-16T06:36:53'
-        type: string
-        custom: []
-      ending_date:
-        name: ending_date
-        description: 'Must be a valid date. Must be a date after <code>starting_date</code>.'
-        required: true
-        example: '2111-03-26'
-        type: string
-        custom: []
-      price:
-        name: price
-        description: ''
-        required: true
-        example: 133.0
-        type: number
-        custom: []
-    cleanBodyParameters:
-      name: nihil
-      starting_date: '2023-06-16T06:36:53'
-      ending_date: '2111-03-26'
-      price: 133.0
-    fileParameters: []
-    responses: []
-    responseFields: []
-    auth: []
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
-      - PUT
-    uri: 'api/v1/admin/travels/{travel_id}'
-    metadata:
-      groupName: Endpoints
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'PUT Travel'
-      description: 'Updates new Travel record.'
-      authenticated: true
-      custom: []
-    headers:
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters:
-      travel_id:
-        name: travel_id
-        description: 'The ID of the travel.'
-        required: true
-        example: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
-        type: string
-        custom: []
-    cleanUrlParameters:
-      travel_id: 995c2795-e8f7-4ff9-ab2a-5a6e0feb55bb
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters:
-      is_public:
-        name: is_public
-        description: ''
-        required: false
-        example: true
-        type: boolean
-        custom: []
-      name:
-        name: name
-        description: ''
-        required: true
-        example: mollitia
-        type: string
-        custom: []
-      description:
-        name: description
-        description: ''
-        required: true
-        example: natus
-        type: string
-        custom: []
-      number_of_days:
-        name: number_of_days
-        description: ''
-        required: true
-        example: 1
-        type: integer
-        custom: []
-    cleanBodyParameters:
-      is_public: true
-      name: mollitia
-      description: natus
-      number_of_days: 1
-    fileParameters: []
-    responses:
-      -
-        status: 200
-        content: '{"data":{"id":"996a36ca-2693-4901-9c55-7136e68d81d5","name":"My new travel 234", ...}'
-        headers: []
-        description: ''
-        custom: []
-      -
-        status: 422
-        content: '{"message":"The name has already been taken.","errors":{"name":["The name has already been taken."]}}'
-        headers: []
-        description: ''
-        custom: []
-    responseFields: []
-    auth: []
-    controller: null
-    method: null
-    route: null
-    custom: []
-  -
-    httpMethods:
-      - POST
-    uri: api/v1/login
-    metadata:
-      groupName: Endpoints
-      groupDescription: ''
-      subgroup: ''
-      subgroupDescription: ''
-      title: 'POST Login'
-      description: 'Login with the existing user.'
-      authenticated: false
-      custom: []
-    headers:
-      Content-Type: application/json
-      Accept: application/json
-    urlParameters: []
-    cleanUrlParameters: []
-    queryParameters: []
-    cleanQueryParameters: []
-    bodyParameters:
-      email:
-        name: email
-        description: 'Must be a valid email address.'
-        required: true
-        example: schulist.hassan@example.org
-        type: string
-        custom: []
-      password:
-        name: password
-        description: ''
-        required: true
-        example: P(L4s(l
-        type: string
-        custom: []
-    cleanBodyParameters:
-      email: schulist.hassan@example.org
-      password: P(L4s(l
-    fileParameters: []
-    responses:
-      -
-        status: 200
-        content: '{"access_token":"1|a9ZcYzIrLURVGx6Xe41HKj1CrNsxRxe4pLA2oISo"}'
-        headers: []
-        description: ''
-        custom: []
-      -
-        status: 422
-        content: '{"error": "The provided credentials are incorrect."}'
-        headers: []
-        description: ''
         custom: []
     responseFields: []
     auth: []
